--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		  bottom: 0;
 		  left: 0;
   		right: 0;
-		  border: 1px solid #dedede;
+		  border: 1px solid #000;
     }
   </style>
 </head>
@@ -21,8 +21,10 @@
   <div class="sim-params">
     <label>Number of sites:</label>
     <input type="text" name="sites">
-    <label>Frequency, sec</label>
+    <label>Desired frequency, sec</label>
     <input type="text" name="freq">
+    <label>Number of experiments</label>
+    <input type="text" name="tests">
     <input type="submit" value="Start">
   </div>
 
