--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <input type="text" name="tests">
     <input type="submit" value="Start">
   </div>
+  
+  <div class="stats">
+	  <p></p>
+  </div>
 
   <script type="text/javascript" src="index.js"></script>
 </body>
